--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@react-firebase/auth": "^0.2.10",
+    "@react-firebase/firestore": "^0.5.5",
     "firebase": "^8.2.9",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
