--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-preact": "^1.1.1",
     "jest": "^26.2.2",
     "jest-preset-preact": "^4.0.2",
+    "mkdirp": "^1.0.4",
     "preact-cli": "^3.0.0",
     "sirv-cli": "^1.0.0-next.3",
     "typescript": "^3.7.5"
