--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "license": "AGPL-3.0-or-later",
   "scripts": {
-    "build": "yarn exec preact build",
+    "build": "CURRENT_COMMIT_HASH=$(git rev-parse HEAD) CURRENT_COMMIT_HASH_SHORT=$(git rev-parse --short HEAD) yarn exec preact build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
