--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "firebase": "^8.2.9",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
