--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/firestore": "^0.5.5",
     "firebase": "^8.2.9",
+    "plausible-tracker": "^0.3.1",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
