add more endings to prettier

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "preact watch",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "test": "jest ./tests",
-    "prettier": "prettier --write src/ tests/ .github/"
+    "prettier": "prettier --write src/ tests/ .github/ *.json *.yml *.md"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
