--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,3 @@
-nodeLinker: "node-modules"
+nodeLinker: 'node-modules'
 enableGlobalCache: true
-yarnPath: "./.yarn/releases/yarn-1.23.0-20210103.1434.cjs"
+yarnPath: './.yarn/releases/yarn-1.23.0-20210103.1434.cjs'
