--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,8 @@ jobs:
                   FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
                   FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
                   FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+                  PLAUSIBLE_DOMAIN: ${{ secrets.PLAUSIBLE_DOMAIN }}
+                  ENABLE_ANALYTICS: true
 
             - name: Deploy
               uses: marvinschopf/action-netlify-deploy@main
