--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		]
 	},
 	"dependencies": {
+		"@babel/plugin-syntax-flow": "^7.12.13",
 		"@react-firebase/auth": "^0.2.10",
 		"@react-firebase/firestore": "^0.5.5",
 		"firebase": "^8.2.9",
