--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
 	},
 	"dependencies": {
 		"@babel/plugin-syntax-flow": "^7.12.13",
+		"@marvman/plausible-tracker": "^0.3.2",
 		"@react-firebase/auth": "^0.2.10",
 		"@react-firebase/firestore": "^0.5.5",
 		"firebase": "^8.2.9",
-		"plausible-tracker": "https://github.com/marvinschopf/plausible-tracker.git#fix-prerendering",
 		"preact": "^10.3.1",
 		"preact-render-to-string": "^5.1.4",
 		"preact-router": "^3.2.1",
