--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
 		"@babel/plugin-syntax-flow": "^7.12.13",
 		"@react-firebase/auth": "^0.2.10",
 		"@react-firebase/firestore": "^0.5.5",
+		"bootstrap": "^4.6.0",
 		"firebase": "^8.2.9",
 		"plausible-tracker": "^0.3.1",
 		"preact": "^10.3.1",
 		"preact-render-to-string": "^5.1.4",
-		"preact-router": "^3.2.1"
+		"preact-router": "^3.2.1",
+		"react-bootstrap": "^1.5.0"
 	},
 	"devDependencies": {
 		"@marvman/preact-cli-plugin-env-vars": "^2.0.0",
