--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
     push:
-        branches: ['main']
+        branches: ["main"]
 
 jobs:
     deploy:
@@ -14,7 +14,7 @@ jobs:
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
-                  node-version: '15'
+                  node-version: "15"
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
