--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 on:
     push:
-        branches: ['*']
+        branches: ["*"]
     pull_request:
         branches: [ "*"]
 
@@ -16,7 +16,7 @@ jobs:
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
-                  node-version: '15'
+                  node-version: "15"
 
             - name: Get yarn cache directory path
               id: yarn-cache-dir-path
