--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
 		"plausible-tracker": "^0.3.1",
 		"preact": "^10.3.1",
 		"preact-render-to-string": "^5.1.4",
-		"preact-router": "^3.2.1",
-		"react-bootstrap": "^1.5.0"
+		"react-bootstrap": "^1.5.0",
+		"react-router-bootstrap": "^0.25.0",
+		"react-router-dom": "^5.2.0"
 	},
 	"devDependencies": {
 		"@marvman/preact-cli-plugin-env-vars": "^2.0.0",
 		"@types/enzyme": "^3.10.5",
 		"@types/jest": "^26.0.8",
+		"@types/react-router-bootstrap": "^0.24.5",
+		"@types/react-router-dom": "^5.1.7",
 		"@typescript-eslint/eslint-plugin": "^2.25.0",
 		"@typescript-eslint/parser": "^2.25.0",
 		"enzyme": "^3.11.0",
