--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
 		"plausible-tracker": "^0.3.1",
 		"preact": "^10.3.1",
 		"preact-render-to-string": "^5.1.4",
-		"react-bootstrap": "^1.5.0",
-		"react-router-bootstrap": "^0.25.0",
-		"react-router-dom": "^5.2.0"
+		"preact-router": "^3.2.1",
+		"react-bootstrap": "^1.5.0"
 	},
 	"devDependencies": {
 		"@marvman/preact-cli-plugin-env-vars": "^2.0.0",
