--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,14 +34,14 @@ jobs:
             - name: Build
               run: yarn run build
               env:
-                  FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-                  FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-                  FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-                  FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
-                  FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-                  FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
-                  PLAUSIBLE_DOMAIN: ${{ secrets.PLAUSIBLE_DOMAIN }}
-                  ENABLE_ANALYTICS: true
+                  APP_FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+                  APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+                  APP_FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+                  APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+                  APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+                  APP_FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+                  APP_PLAUSIBLE_DOMAIN: ${{ secrets.PLAUSIBLE_DOMAIN }}
+                  APP_ENABLE_ANALYTICS: true
 
             - name: Deploy
               uses: marvinschopf/action-netlify-deploy@main
