--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"dependencies": {
 		"@babel/plugin-syntax-flow": "^7.12.13",
+		"@blueprintjs/core": "^3.39.0",
 		"@react-firebase/auth": "^0.2.10",
 		"@react-firebase/firestore": "^0.5.5",
 		"bootstrap": "^4.6.0",
@@ -30,8 +31,7 @@
 		"plausible-tracker": "^0.3.1",
 		"preact": "^10.3.1",
 		"preact-render-to-string": "^5.1.4",
-		"preact-router": "^3.2.1",
-		"react-bootstrap": "^1.5.0"
+		"preact-router": "^3.2.1"
 	},
 	"devDependencies": {
 		"@marvman/preact-cli-plugin-env-vars": "^2.0.0",
