--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
             - name: Build
               run: yarn run build
 
+            - name: Create rewrite rules
+              run: echo "/* /index.html 200" >> build/_redirects
+
             - name: Deploy
               uses: marvinschopf/action-netlify-deploy@main
               with:
